# rusty_api

./: .gitignore  Cargo.toml  README.md  Rocket.toml-example
migrations/2018-12-10-083005_users/: up.sql
src/: main.rs  schema.rs
src/controllers/: users.rs
src/models/: user.rs
