[package]
name = "rusty-api"
version = "0.1.0"
authors = ["Edwin Cloud <ecloud412@gmail.com>"]

[dependencies]
rocket = "0.4.0"
rocket_codegen = "0.4.0"
serde = "1.0.81"
serde_json = "1.0.33"
serde_derive = "1.0.81"
diesel = { version = "1.0.0", features = ["mysql"] }
diesel_codegen = { version = "0.16.0", features = ["mysql"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "diesel_mysql_pool"]